--- a/SPH/SPH.vcxproj.filters
+++ b/SPH/SPH.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="src\simulation\particle_system.cpp" />
     <ClCompile Include="src\simulation\simulation_parameters.cpp" />
     <ClCompile Include="src\simulation\particles_cube.cpp" />
+    <ClCompile Include="src\rendering\smooth_renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\nanovg\src\fontstash.h" />
@@ -31,9 +32,12 @@
     <ClInclude Include="includes\simulation\particle_system.h" />
     <ClInclude Include="includes\simulation\simulation_parameters.h" />
     <ClInclude Include="includes\simulation\particles_cube.h" />
+    <ClInclude Include="includes\rendering\smooth_renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\boundary.frag" />
     <None Include="shaders\boundary.vert" />
+    <None Include="shaders\smooth_renderer\render_texture.frag" />
+    <None Include="shaders\smooth_renderer\render_texture.vert" />
   </ItemGroup>
 </Project>
