--- a/SPH/SPH.vcxproj.filters
+++ b/SPH/SPH.vcxproj.filters
@@ -40,6 +40,8 @@
     <None Include="shaders\smooth_renderer\render_texture.frag" />
     <None Include="shaders\smooth_renderer\render_texture.vert" />
     <None Include="shaders\smooth_renderer\depth_smoothing_shader.frag" />
+    <None Include="shaders\smooth_renderer\extract_normals_from_depth.frag" />
     <None Include="shaders\smooth_renderer\depth_smoothing_shader.vert" />
+    <None Include="shaders\smooth_renderer\extract_normals_from_depth.vert" />
   </ItemGroup>
 </Project>
