--- a/SPH/SPH.vcxproj.filters
+++ b/SPH/SPH.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClInclude Include="includes\simulation\simulation_parameters.h" />
     <ClInclude Include="includes\simulation\particles_cube.h" />
     <ClInclude Include="includes\rendering\smooth_renderer.h" />
+    <ClInclude Include="includes\rendering\scroll_form_helper.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\boundary.frag" />
