--- a/SPH/SPH.vcxproj
+++ b/SPH/SPH.vcxproj
@@ -113,6 +113,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="..\common\nanovg\src\stb_image.h" />
     <ClInclude Include="..\common\nanovg\src\stb_truetype.h" />
     <ClInclude Include="includes\rendering\camera.h" />
+    <ClInclude Include="includes\rendering\rendering_parameters.h" />
     <ClInclude Include="includes\rendering\scroll_form_helper.h" />
     <ClInclude Include="includes\rendering\smooth_renderer.h" />
     <ClInclude Include="includes\simulation\simulation_parameters.h" />
@@ -132,6 +133,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
   <ItemGroup>
     <ClCompile Include="..\common\src\glad.c" />
     <ClCompile Include="src\rendering\camera.cpp" />
+    <ClCompile Include="src\rendering\rendering_parameters.cpp" />
     <ClCompile Include="src\rendering\smooth_renderer.cpp" />
     <ClCompile Include="src\simulation\particles_cube.cpp" />
     <ClCompile Include="src\simulation\particle_system.cpp" />
