--- a/SPH/SPH.vcxproj
+++ b/SPH/SPH.vcxproj
@@ -128,6 +128,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </CudaCompile>
+    <CudaCompile Include="src\simulation\pbf_kernels.cu" />
     <CudaCompile Include="src\simulation\position_based_fluid_simulator.cu" />
   </ItemGroup>
   <ItemGroup>
