Add smoothing kernel as member

--- a/SPH/SPH.vcxproj.filters
+++ b/SPH/SPH.vcxproj.filters
@@ -4,6 +4,7 @@
     <CudaCompile Include="includes\simulation\pbf_kernels.cuh" />
     <CudaCompile Include="src\simulation\position_based_fluid_simulator.cu" />
     <CudaCompile Include="src\simulation\pbf_kernels.cu" />
+    <CudaCompile Include="includes\simulation\pbf_smoothing_kernels.cuh" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\src\glad.c" />
