--- a/SPH/SPH.vcxproj.filters
+++ b/SPH/SPH.vcxproj.filters
@@ -39,6 +39,7 @@
     <ClInclude Include="includes\rendering\scroll_form_helper.h" />
     <ClInclude Include="includes\rendering\rendering_parameters.h" />
     <ClInclude Include="includes\simulation\converters.cuh" />
+    <ClInclude Include="includes\simulation\updaters.cuh" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\boundary.frag" />
